<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_dices"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp" />


    <EditText
        android:id="@+id/side_of_dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_dice"
        android:layout_marginBottom="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_dice"
        android:textSize="10sp"
        android:textColor="@android:color/holo_red_dark"
        android:layout_marginBottom="20dp"
        tools:ignore="SmallSp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiple_dice"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="10sp"
        android:layout_marginBottom="20dp"
        tools:ignore="SmallSp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contains_ten"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="10sp"
        android:layout_marginBottom="20dp"
        tools:ignore="SmallSp" />
    <Button
        android:id="@+id/create_dices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_dices"
        android:layout_marginBottom="20dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginBottom="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll_dices"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp" />
    <Spinner
        android:id="@+id/dice_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        />
    <Button
        android:id="@+id/roll_dices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roll_dices"
        android:layout_marginBottom="20dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/first_dice"/>
        <TextView
            android:id="@+id/first_dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/second_dice"/>
        <TextView
            android:id="@+id/second_dice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </LinearLayout>



</LinearLayout>